# drt-boilerplate666

./: package.json  pyproject.toml
backend/: settings.py  urls.py
