[tool.poetry]
name = "django-react-boilerplate"
version = "0.1.0"
description = ""
authors = ["JosephVC <josephvcardenas@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
django = "^3.0.6"
djangorestframework = "^3.11.0"
whitenoise = "^5.1.0"
gunicorn = "^20.0.4"
django-heroku = "^0.3.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
